--- a/Curiosity/Curiosity/Base.lproj/Main.storyboard
+++ b/Curiosity/Curiosity/Base.lproj/Main.storyboard
@@ -710,11 +710,14 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6V8-J1-CXu">
-                                <rect key="frame" x="18" y="14" width="444" height="28"/>
+                                <rect key="frame" x="18" y="224" width="444" height="28"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <sliderCell key="cell" continuous="YES" state="on" alignment="left" maxValue="400" doubleValue="52.01171875" tickMarkPosition="above" sliderType="linear" id="thB-n5-edY">
-                                    <font key="font" metaFont="system" size="12"/>
+                                <sliderCell key="cell" continuous="YES" state="on" alignment="left" maxValue="400" tickMarkPosition="above" sliderType="linear" id="thB-n5-edY">
+                                    <font key="font" metaFont="cellTitle"/>
                                 </sliderCell>
+                                <connections>
+                                    <action selector="distanceChanged:" target="XfG-lQ-9wD" id="55I-6h-dTQ"/>
+                                </connections>
                             </slider>
                         </subviews>
                     </view>
