Set video container size

--- a/Curiosity/Curiosity/Base.lproj/Main.storyboard
+++ b/Curiosity/Curiosity/Base.lproj/Main.storyboard
@@ -706,21 +706,19 @@
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="ViewController" customModule="Curiosity" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="1126" height="744"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1126" height="1003"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <textField hidden="YES" focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cA7-Xr-qpZ">
+                            <textField hidden="YES" focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cA7-Xr-qpZ">
                                 <rect key="frame" x="503" y="491" width="120" height="233"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="0" id="Mfk-M0-ZM8">
                                     <font key="font" size="200" name="HelveticaNeue"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <textField hidden="YES" focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EWa-LM-WW4">
+                            <textField hidden="YES" focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EWa-LM-WW4">
                                 <rect key="frame" x="494" y="437" width="138" height="59"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="saved" id="S16-66-fA0">
                                     <font key="font" size="50" name="HelveticaNeue"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -728,14 +726,14 @@
                                 </textFieldCell>
                             </textField>
                             <slider hidden="YES" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6V8-J1-CXu">
-                                <rect key="frame" x="9" y="707" width="444" height="28"/>
+                                <rect key="frame" x="9" y="966" width="444" height="28"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <sliderCell key="cell" continuous="YES" state="on" alignment="left" maxValue="400" doubleValue="190.703125" tickMarkPosition="above" sliderType="linear" id="thB-n5-edY">
                                     <font key="font" metaFont="cellTitle"/>
                                 </sliderCell>
                             </slider>
                             <textField hidden="YES" focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6nv-Co-HKt">
-                                <rect key="frame" x="9" y="406" width="776" height="285"/>
+                                <rect key="frame" x="9" y="665" width="776" height="285"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Label" id="H9B-lR-uIY">
                                     <font key="font" metaFont="system"/>
@@ -743,11 +741,19 @@
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kys-xP-5y0">
-                                <rect key="frame" x="0.0" y="259" width="1126" height="485"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            <customView id="kys-xP-5y0">
+                                <rect key="frame" x="0.0" y="0.0" width="1126" height="1003"/>
+                                <autoresizingMask key="autoresizingMask"/>
                             </customView>
                         </subviews>
+                        <constraints>
+                            <constraint firstItem="kys-xP-5y0" firstAttribute="centerX" secondItem="EWa-LM-WW4" secondAttribute="centerX" id="ALO-ld-Z9M"/>
+                            <constraint firstAttribute="bottom" secondItem="kys-xP-5y0" secondAttribute="bottom" id="Jr6-q7-1jx"/>
+                            <constraint firstItem="kys-xP-5y0" firstAttribute="centerX" secondItem="cA7-Xr-qpZ" secondAttribute="centerX" id="aO4-aw-edY"/>
+                            <constraint firstAttribute="trailing" secondItem="kys-xP-5y0" secondAttribute="trailing" id="cNr-Xf-Mym"/>
+                            <constraint firstItem="kys-xP-5y0" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="lZj-lu-MvZ"/>
+                            <constraint firstItem="kys-xP-5y0" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" id="vui-3d-V8s"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="debugLabel" destination="6nv-Co-HKt" id="lXk-Qd-mYr"/>
@@ -759,7 +765,7 @@
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="398" y="892"/>
+            <point key="canvasLocation" x="398" y="891.5"/>
         </scene>
     </scenes>
 </document>
