--- a/Curiosity/Curiosity/Base.lproj/Main.storyboard
+++ b/Curiosity/Curiosity/Base.lproj/Main.storyboard
@@ -710,20 +710,20 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <textField hidden="YES" focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cA7-Xr-qpZ">
-                                <rect key="frame" x="503" y="491" width="120" height="233"/>
+                                <rect key="frame" x="356" y="491" width="429" height="233"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="0" id="Mfk-M0-ZM8">
                                     <font key="font" size="200" name="HelveticaNeue"/>
-                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
                             <textField hidden="YES" focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EWa-LM-WW4">
-                                <rect key="frame" x="494" y="437" width="138" height="59"/>
+                                <rect key="frame" x="356" y="437" width="429" height="59"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <textFieldCell key="cell" lineBreakMode="clipping" title="saved" id="S16-66-fA0">
+                                <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="saved" id="S16-66-fA0">
                                     <font key="font" size="50" name="HelveticaNeue"/>
-                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
